Design: Fix opening SCD form, Shortcuts: Now [F9] will make jump to title screen

--- a/App/css/style.css
+++ b/App/css/style.css
@@ -1674,7 +1674,7 @@ blockquote {
     background-image: linear-gradient(to bottom, #444, #666);
 }
 .R3_RDT_FILELIST_SERACH {
-    width: 68%;
+    width: 64%;
     color: #0f0;
     border: none;
     padding: 4px;
